--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.28",
+    "jsplumb": "^2.15.6",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.45"
   },
   "devDependencies": {
@@ -25,7 +27,11 @@
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.15",
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
